fix overflow on list

--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -3,6 +3,7 @@
   padding-bottom: 0;
   padding-top: 0;
   border-right: solid #e0e0e0 0.15rem;
+  color: rgb(65, 64, 64);
 }
 
 .todo-list {
@@ -39,7 +40,12 @@
   transition: all 0.2s;
   border-bottom: 0.1rem #e0e0e0 solid;
 }
-
+.todo-list .list-item .main {
+  width: 24rem;
+  display: inline-block;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 .completed {
   color: rgba(10, 10, 10, 0.514) !important;
   background-color: transparent !important;
@@ -50,11 +56,17 @@
 }
 .todo-box {
   font-size: large;
+  padding: 0.4rem;
+  border-radius: 0.5rem;
+}
+.todo-box:hover {
+  color: black;
+  background-color: rgba(255, 255, 255, 0.281);
 }
 
 .todo-list .list-item:hover {
   border-radius: 0.5rem;
-  background-color: rgba(41, 41, 41, 0.1);
+  background-color: rgba(53, 53, 53, 0.1);
 }
 
 .todo-input {
